<resources>
    <string name="app_name">Edificia</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Correo</string>
    <string name="prompt_password">Contraseña </string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">El correo es invalido</string>
    <string name="error_invalid_password">La contraseña es muy corta</string>
    <string name="error_incorrect_password">Contraseña incorrecta</string>
    <string name="error_field_required">Este campo es obligatiorio</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Edificia</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Edificia</string>
    <string name="title_app">Edificia</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- InvoiceDetail -->
    <string name="invoice_date_issued">F. Emisión</string>
    <string name="invoice_date_due">F. Vencimiento</string>
    <string name="invoice_name">Nombre</string>
    <string name="invoice_number">Numero Recibo</string>
    <string name="invoice_periods_names">Periodo</string>
    <string name="invoice_total">Total</string>
    <string name="invoice_balance">Saldo</string>

    <!-- Booking -->
    <string name="booking_common_area_name">Área</string>
    <string name="booking_from">Inicio: </string>
    <string name="booking_to">Final:  </string>


    <string-array name="TipoInformePerson">
        <item>Detallado</item>
    </string-array>

    <string-array name="TipoInformeEmployee">
        <item>Resumido</item>
        <item>Detallado</item>
    </string-array>


    <string name="prompt_bluiding">Seleccione</string>


    <string name="detalle_reserva"><u>Detalles</u></string>
    <string name="terminos_reserva"><u>Ver</u></string>

</resources>
