<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pe.assetec.edificia.fragment.InvoiceDetailFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:textAlignment="center"
            android:weightSum="1">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.81"
                android:text="Descargar Recibo (PDF)" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingEnd="8dp"
            android:paddingLeft="25dp"
            android:paddingTop="10dp"
            android:textAlignment="center">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textAlignment="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:textAlignment="center">

                <TextView
                    android:id="@+id/tvdInvoiceDateIssuedLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/invoice_date_issued"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/tvdInvoiceDateIssued"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/invoice_total"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:textAlignment="center">

                <TextView
                    android:id="@+id/tvdInvoiceDateDuelabel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/invoice_date_due"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/tvdInvoiceDateDue"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/invoice_balance"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                </LinearLayout>
            </LinearLayout>


            <TextView
                android:id="@+id/tvdInvoiceNamelabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invoice_name"
                android:textAlignment="gravity"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/tvdInvoiceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="false"
                android:text="@string/invoice_name"
                android:textAlignment="gravity"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>


            <TextView
                android:id="@+id/tvdInvoiceNumberlabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/invoice_number"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/tvdInvoiceNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/invoice_number"
                android:textAlignment="gravity"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>


            <TextView
                android:id="@+id/tvdInvoicePeriodNamelabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/invoice_periods_names"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/tvdInvoicePeriodName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/invoice_periods_names"
                android:textAlignment="gravity"
                android:textColor="@android:color/black"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textAlignment="center">

                <TextView
                    android:id="@+id/tvdInvoiceTotallabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/invoice_total"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/tvdInvoiceTotal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/invoice_total"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>


                <TextView
                    android:id="@+id/tvdInvoiceBalancelabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/invoice_balance"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

                <TextView
                    android:id="@+id/tvdInvoiceBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/invoice_balance"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>


            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="8">

            <ListView
                android:id="@+id/lvFragmentInvoiceDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>


    </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabInvoice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:src="?android:attr/actionModeFindDrawable"
        app:backgroundTint="@color/colorPrimary" />
</FrameLayout>
